# spotify_monitor

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  MANIFEST.in  README.md  RELEASE_NOTES.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  spotify_monitor.py
.github/: dependabot.yml
.github/workflows/: docs.yml  publish-docker.yml  publish.yml  release-assets.yml  tests.yml
about/: index.html
configuration/: index.html
debug/: spotify_monitor_secret_grabber.py  spotify_monitor_totp_test.py  spotify_totp_debug_test.py
debug/spotify_monitor_secret_grabber_docker/: .dockerignore  Dockerfile  compose.yaml
debugging/: index.html
docs/: about.md  configuration.md  debugging.md  index.md  installation.md  quick-start.md  setup-and-first-run.md  testing.md  troubleshooting.md  usage.md
grc/: conf.monitor_logs
installation/: index.html
quick-start/: index.html
search/: search_index.json
setup-and-first-run/: index.html
testing/: index.html
tests/: test_browser_cookie_import.py  test_config_and_inputs.py  test_container_assets.py  test_doctor.py  test_install_method_commands.py  test_recovery_errors.py  test_set_sp_dc.py  test_setup_wizard.py  test_spotify_web_backends.py  test_startup_ui.py  test_totp_secret_extraction.py  test_webhook_notifications.py
troubleshooting/: index.html
usage/: index.html
