[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify_monitor"
version = "2.9"
description = "Track Spotify friends' music activity in real time with auto-playback, skipped tracks detection and instant notifications"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Michal Szymanski", email = "misiektoja-pypi@rm-rf.ninja" }]
requires-python = ">=3.6"
dependencies = [
  "requests>=2.0",
  "python-dateutil>=2.8",
  "urllib3>=2.0.7",
  "pyotp>=2.9.0",
  "python-dotenv>=0.19",
  "wcwidth>=0.2.7",
  "spotipy>=2.24.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
]
keywords = ["spotify", "monitoring", "tracking", "real-time", "friend-activity",  "osint"]

[project.urls]
Homepage = "https://github.com/misiektoja/spotify_monitor"
Source   = "https://github.com/misiektoja/spotify_monitor"
Changelog= "https://github.com/misiektoja/spotify_monitor/blob/main/RELEASE_NOTES.md"

[project.scripts]
spotify_monitor = "spotify_monitor:main"
spotify_monitor_secret_grabber = "debug.spotify_monitor_secret_grabber:main"
spotify_monitor_totp_test = "debug.spotify_monitor_totp_test:main"

[tool.setuptools]
py-modules = ["spotify_monitor"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["debug*"]
namespaces = true
